// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> headstones renders the content of the headstone in a box above the card 1`] = `
.emotion-1 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0 0 0 1px rgba(5,25,45,0.1);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  margin-top: 20px;
  position: relative;
}

.emotion-0 {
  height: 40px;
  left: 32px;
  position: absolute;
  top: -20px;
}

<div
  class="emotion-1"
>
  <div
    class="emotion-0"
  >
    this is in the headstone
  </div>
  <p>
    example content
  </p>
</div>
`;

exports[`<Card /> snapshots renders a card with elevation 0 1`] = `
.emotion-0 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0 0 0 1px rgba(5,25,45,0.1);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
}

<div
  class="emotion-0"
>
  <p>
    example content
  </p>
</div>
`;

exports[`<Card /> snapshots renders a card with elevation 1 1`] = `
.emotion-0 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0px 0px 1px 0px rgba(5,25,45,0.3),0 1px 4px -1px rgba(5,25,45,0.3);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
}

<div
  class="emotion-0"
>
  <p>
    example content
  </p>
</div>
`;

exports[`<Card /> snapshots renders a card with elevation 2 1`] = `
.emotion-0 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0px 0px 1px 0px rgba(5,25,45,0.3),0 2px 4px -1px rgba(5,25,45,0.3);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
}

<div
  class="emotion-0"
>
  <p>
    example content
  </p>
</div>
`;

exports[`<Card /> snapshots renders a card with elevation 3 1`] = `
.emotion-0 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0px 0px 1px 0px rgba(5,25,45,0.3),0 3px 5px -1px rgba(5,25,45,0.3);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
}

<div
  class="emotion-0"
>
  <p>
    example content
  </p>
</div>
`;

exports[`<Card /> snapshots renders a card with elevation 4 1`] = `
.emotion-0 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0px 0px 1px 0px rgba(5,25,45,0.3),0 8px 12px -4px rgba(5,25,45,0.3);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
}

<div
  class="emotion-0"
>
  <p>
    example content
  </p>
</div>
`;

exports[`<Card /> snapshots renders a card with hoverElevation 1 1`] = `
.emotion-0 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0 0 0 1px rgba(5,25,45,0.1);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
}

.emotion-0:hover {
  box-shadow: 0px 0px 1px 0px rgba(5,25,45,0.3),0 1px 4px -1px rgba(5,25,45,0.3);
  -webkit-transform: translate(0,-1px);
  -ms-transform: translate(0,-1px);
  transform: translate(0,-1px);
}

<div
  class="emotion-0"
>
  <p>
    example content
  </p>
</div>
`;

exports[`<Card /> snapshots renders a card with hoverElevation 2 1`] = `
.emotion-0 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0 0 0 1px rgba(5,25,45,0.1);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
}

.emotion-0:hover {
  box-shadow: 0px 0px 1px 0px rgba(5,25,45,0.3),0 2px 4px -1px rgba(5,25,45,0.3);
  -webkit-transform: translate(0,-1px);
  -ms-transform: translate(0,-1px);
  transform: translate(0,-1px);
}

<div
  class="emotion-0"
>
  <p>
    example content
  </p>
</div>
`;

exports[`<Card /> snapshots renders a card with hoverElevation 3 1`] = `
.emotion-0 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0 0 0 1px rgba(5,25,45,0.1);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
}

.emotion-0:hover {
  box-shadow: 0px 0px 1px 0px rgba(5,25,45,0.3),0 3px 5px -1px rgba(5,25,45,0.3);
  -webkit-transform: translate(0,-1px);
  -ms-transform: translate(0,-1px);
  transform: translate(0,-1px);
}

<div
  class="emotion-0"
>
  <p>
    example content
  </p>
</div>
`;

exports[`<Card /> snapshots renders a card with hoverElevation 4 1`] = `
.emotion-0 {
  background-color: rgb(255,255,255);
  border-radius: 4px;
  box-shadow: 0 0 0 1px rgba(5,25,45,0.1);
  -webkit-transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
  transition: all 0.6s cubic-bezier(0.075,0.82,0.165,1);
}

.emotion-0:hover {
  box-shadow: 0px 0px 1px 0px rgba(5,25,45,0.3),0 8px 12px -4px rgba(5,25,45,0.3);
  -webkit-transform: translate(0,-1px);
  -ms-transform: translate(0,-1px);
  transform: translate(0,-1px);
}

<div
  class="emotion-0"
>
  <p>
    example content
  </p>
</div>
`;
